Fixed overlapping of text in job-slider closes #168

--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -117,6 +117,8 @@
 
         p {
           text-align: center;
+          margin: 0;
+          white-space: normal;
         }
       }
 
